--- a/frontend/views/bookingsAdmin.html
+++ b/frontend/views/bookingsAdmin.html
@@ -1,8 +1,8 @@
 <div class="background">
     <div class="continut flex-column ">
-    <div class="text-center justify-content-center">
-    <p style="font-size:25px;font-weight:bold">Bookings</p> 
-    </div>
+        <div class="text-center justify-content-center">
+            <p style="font-size:25px;font-weight:bold">Bookings</p>
+        </div>
         <div class="container mx-auto margins">
             <div ng-controller="bookingAdmin">
                 <table class="table table-hover" role="table">
@@ -10,10 +10,9 @@
                         <tr role="row">
                             <th role="columnheader" style="width:10%;">Movie</th>
                             <th role="columnheader" style="width:10%;">Date</th>
-                            <th role="columnheader" style="width:10%;">Time</th>
                             <th role="columnheader" style="width:10%;">Seats Booked</th>
                             <th role="columnheader" style="width:10%;">User Id</th>
-                         
+
                         </tr>
                     </thead>
                     <tbody role="rowgroup">
@@ -23,130 +22,135 @@
                 </table>
 
                 <script type="text/ng-template" id="display">
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.movieTitle}}</p></td>
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.date}}</p></td>
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.time}}</p></td>
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.seatsBooked}}</p></td>
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.userId}}</p></td>
-                
-                
-            </script>
+                    <td style="width:auto;" class="details">
+                        <p class="paragraph my-auto">{{info.movieId}}</p>
+                    </td>
+                    <td style="width:auto;" class="details">
+                        <p class="paragraph my-auto">{{info.date | date:'dd MMM yyyy HH:mm'}}</p>
+                    </td>
+                    <td style="width:auto;" class="details">
+                        <p class="paragraph my-auto">{{info.seatsBooked}}</p>
+                    </td>
+                    <td style="width:auto;" class="details">
+                        <p class="paragraph my-auto">{{info.userId}}</p>
+                    </td>
+
+
+                </script>
+            </div>
         </div>
     </div>
-</div>
 
-<style>
-th{
-    color:black;
-}
-.details {
-        color: black;
-        font-size: 17px;
-        font-family: 'Patrick Hand';
-        text-align: center;
-    }
-  .background {
-        background-image: url("../../images/1.jpg");
-        width: 100%;
-        height: auto;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-    .margins{
-        margin-top:50px;
-        margin-bottom:50px;
-        min-height:400px;
-    }
-    @media only screen and (max-width: 760px),
-    (min-device-width: 768px) and (max-device-width: 1024px) {
-        /* Force table to not be like tables anymore */
-        .movie-title {
-            font-size: 14px;
-        }
-        .movie-title.movie-attr {
-            margin-top: 25px;
+    <style>
+        th {
+            color: black;
         }
         
-        table,
-        thead,
-        tbody,
-        th,
-        td,
-        tr {
-            display: block;
+        .details {
+            color: black;
+            font-size: 17px;
+            font-family: 'Patrick Hand';
+            text-align: center;
         }
-        /* Hide table headers (but not display: none;, for accessibility) */
-        thead tr {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
+        
+        .background {
+            background-image: url("../../images/1.jpg");
+            width: 100%;
+            height: auto;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
-        .table td {
-            padding-left: 165px;
-            padding-top: 1px;
-            padding-right: 1px;
-            padding-bottom: 1px;
-            border-top: 1px solid white !important;
+        
+        .margins {
+            margin-top: 50px;
+            margin-bottom: 50px;
+            min-height: 400px;
         }
-        tr {
-            margin: 0 0 1rem 0;
-            border-bottom: 2px dotted black !important;
-        }
-        td {
-            /* Behave  like a "row" */
-            border: none;
-            border-bottom: 1px solid #eee;
-            position: relative;
-            padding-left: 50%;
-        }
-        td:before {
-            /* Now like a table header */
-            position: absolute;
-            /* Top/left values mimic padding */
-            top: 0;
-            left: 6px;
-            width: 45%;
-            padding-right: 10px;
-            white-space: nowrap;
-        }
-        /*
+        
+        @media only screen and (max-width: 760px),
+        (min-device-width: 768px) and (max-device-width: 1024px) {
+            /* Force table to not be like tables anymore */
+            .movie-title {
+                font-size: 14px;
+            }
+            .movie-title.movie-attr {
+                margin-top: 25px;
+            }
+            table,
+            thead,
+            tbody,
+            th,
+            td,
+            tr {
+                display: block;
+            }
+            /* Hide table headers (but not display: none;, for accessibility) */
+            thead tr {
+                position: absolute;
+                top: -9999px;
+                left: -9999px;
+            }
+            .table td {
+                padding-left: 165px;
+                padding-top: 1px;
+                padding-right: 1px;
+                padding-bottom: 1px;
+                border-top: 1px solid white !important;
+            }
+            tr {
+                margin: 0 0 1rem 0;
+                border-bottom: 2px dotted black !important;
+            }
+            td {
+                /* Behave  like a "row" */
+                border: none;
+                border-bottom: 1px solid #eee;
+                position: relative;
+                padding-left: 50%;
+            }
+            td:before {
+                /* Now like a table header */
+                position: absolute;
+                /* Top/left values mimic padding */
+                top: 0;
+                left: 6px;
+                width: 45%;
+                padding-right: 10px;
+                white-space: nowrap;
+            }
+            /*
           Label the data
           You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
           */
-        td:nth-of-type(1):before {
-            content: "Movie";
-            margin-left: -25px;
-            color:black;
-            font-weight:bold;
-     
+            td:nth-of-type(1):before {
+                content: "Movie";
+                margin-left: -25px;
+                color: black;
+                font-weight: bold;
+            }
+            td:nth-of-type(2):before {
+                content: "Date";
+                margin-left: -25px;
+                color: black;
+                font-weight: bold;
+            }
+            td:nth-of-type(3):before {
+                content: "Time";
+                margin-left: -25px;
+                color: black;
+                font-weight: bold;
+            }
+            td:nth-of-type(4):before {
+                content: "Seats";
+                margin-left: -25px;
+                color: black;
+                font-weight: bold;
+            }
+            td:nth-of-type(5):before {
+                content: "User Id";
+                color: black;
+                font-weight: bold;
+                margin-left: -25px;
+            }
         }
-        td:nth-of-type(2):before {
-            content: "Date";
-            margin-left: -25px;
-            color:black;
-            font-weight:bold;
-    
-        }
-        td:nth-of-type(3):before {
-            content: "Time";
-            margin-left: -25px;
-            color:black;
-            font-weight:bold;
-         
-        }
-        td:nth-of-type(4):before {
-            content: "Seats";
-            margin-left:-25px;
-            color:black;
-            font-weight:bold;
-      
-        }
-        td:nth-of-type(5):before {
-            content: "User Id";
-            color:black;
-            font-weight:bold;
-            margin-left:-25px;
-         
-        }
-    }
-</style>
+    </style>
