--- a/frontend/views/partials/modals/confirmation.html
+++ b/frontend/views/partials/modals/confirmation.html
@@ -8,7 +8,7 @@
                         <img src="../../images/verif.png" style="height:100px;width:100px">
                         </div>
         <div class="col-md-12 mx-auto text-left">
-            <p class="confirmation"><strong style="color: red"> Seats chosen :</strong> {{booking.seatsBooked}}</p>
+            <p class="confirmation"><strong style="color: red"> Seats chosen :</strong> {{seatsSelection}}</p>
         </div>
         <div class="col-md-12 mx-auto text-left">
             <p class="confirmation"> <strong style="color: red">Total price:</strong> {{5*nrSeats}}$</p>
